# byaper.ai

./: .gitignore  vercel.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: analytics.py  auth.py  automations.py  gbp.py  messages.py  posts.py  reviews.py  team.py  workers.py  workspaces.py
backend/app/core/: config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py  analytics.py  automation.py  business.py  message.py  post.py  review.py  user.py  workspace.py
backend/app/schemas/: auth.py  automation.py  message.py  post.py  review.py  team.py  workspace.py
backend/app/services/: ai_service.py  gbp_service.py  image_service.py  meta_service.py  queue_service.py
backend/app/workers/: auto_runner.py
doc/: design.md  prd.md  supabase_schema.sql  tech-stack.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/workspace/: page.tsx
frontend/app/(dashboard)/[businessId]/: layout.tsx  page.tsx
frontend/components/automations/: AutomationCard.tsx  BusinessKnowledgeForm.tsx
frontend/components/layout/: Sidebar.tsx  TopNav.tsx
frontend/components/posts/: PostComposerModal.tsx
frontend/components/ui/: cobe-globe.tsx  ethereal-beams.tsx  input.tsx  textarea.tsx
frontend/components/workspace/: WorkspaceSwitcher.tsx
frontend/lib/: api.ts
frontend/lib/stores/: workspaceStore.ts
frontend/lib/supabase/: middleware.ts
(+11 files in other folders)
